--- a/animation/03-dropdown-menu/style.css
+++ b/animation/03-dropdown-menu/style.css
@@ -27,6 +27,20 @@ ul.dropdown-menu li:hover {
 
 .visible {
   display: block;
+  animation: scale 0.8s ease-in-out;
+  transform-origin: top;
 }
 
+@keyframes scale {
+  0% {
+    transform: scaleY(0);
+  }
 
+  50% {
+    transform: scaleY(1.4);
+  }
+  
+  100% {
+    transform: scaleY(1);
+  }
+}
