--- a/animation/01-button-hover/style.css
+++ b/animation/01-button-hover/style.css
@@ -16,4 +16,9 @@ button {
   font-size: 18px;
   padding: 16px 24px;
   text-align: center;
+  transition: transform 0.3s ease-in-out;
+}
+
+button:hover {
+  scale: 1.3;
 }
