--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -39,6 +39,8 @@ button {
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+  transition: transform 0.5s ease-in, opacity 0.5s ease;
+  transform: translate(-50%, -90%);
 }
 
 .popup-modal p {
@@ -56,6 +58,7 @@ button {
 .popup-modal.show {
   opacity: 100%;
   pointer-events: all;
+  transform: translate(-50%, -30%);
 }
 
 .backdrop.show {
