--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +24,22 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.images {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  /* align-items: center; */
+  gap: 70px;
+}
+
+.item {
+  width: 250px;
+  /* align-items: center;
+  justify-content: center; */
+}
+
+.text {
+  text-align: center;
 }
