--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,30 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.modal {
+  display: flex;
+  gap: 20px;
+  padding: 15px;
+}
+
+.icon {
+  flex-shrink: 0;
+}
+
+.header-with-btn {
+  justify-content: space-between;
+}
+
+.header-btn {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: space-between;
+  font-weight: bold !important;
+  margin-bottom: 15px;
+}
+
+.text {
+  margin-bottom: 15px;
+}
