--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,17 @@
 /* Add CSS Styling */
+/* div {
+    display: flex;
+    gap: 5px;
+    padding: 2px;
+} */
+
+.avatar.proportioned {
+    width: 300px;
+    height: 50%;
+    /* margin-top: 100px; */
+}
+
+.avatar.distorted {
+    width: 200px;
+    height: 400px;
+}
